# cargonauts

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  deploy_docs.sh
book/src/: SUMMARY.md  echo.md  intro.md  mvc.md  ping.md  routes.md  setup.md  structure.md
compass-rose/: Cargo.toml
compass-rose/src/: lib.rs
compass-rose/src/front/: ast.rs  mod.rs  parser.lalrpop  parser.rs  tests.rs
demo/colors/: Cargo.toml
demo/colors/src/: lib.rs  routing.rs
demo/todomvc/: Cargo.toml  README.md  build.rs
demo/todomvc/frontend/: package.json
demo/todomvc/frontend/app/: index.html  router.js
demo/todomvc/frontend/app/adapters/: application.js
demo/todomvc/frontend/app/models/: note.js
demo/todomvc/frontend/app/routes/: index.js  todo.js
demo/todomvc/frontend/app/serializers/: application.js
demo/todomvc/frontend/app/styles/: app.css
demo/todomvc/frontend/app/templates/: todo.hbs
demo/todomvc/frontend/config/: environment.js
demo/todomvc/frontend/server/proxies/: api.js
demo/todomvc/src/: lib.rs  routing.rs
demo/todomvc/src/clients/: .store.rs.swp  mod.rs  store.rs
demo/todomvc/src/middleware/: logging.rs  mod.rs
demo/todomvc/src/resources/: mod.rs  note.rs
docs/: echo.html  index.html  intro.html  mvc.html  ping.html  print.html  routes.html  setup.html  structure.html
docs/api/: search-index.js
docs/api/aho_corasick/: index.html  struct.AcAutomaton.html  struct.Dense.html  struct.FullAcAutomaton.html  struct.Match.html  struct.Matches.html  struct.MatchesOverlapping.html  struct.Sparse.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html  trait.Automaton.html  trait.Transitions.html  type.StateIdx.html
docs/api/anymap/: enum.Entry.html  index.html  struct.Map.html  struct.OccupiedEntry.html  struct.VacantEntry.html  type.AnyMap.html
docs/api/asset_pipeline/: build_assets.v.html  fn.build_assets.html  index.html  sidebar-items.js
docs/api/backtrace/: fn.resolve.html  fn.trace.html  index.html  struct.Backtrace.html  struct.BacktraceFrame.html  struct.BacktraceSymbol.html  struct.Frame.html  struct.Symbol.html
docs/api/base64/: enum.Base64Error.html  enum.CharacterSet.html  fn.decode.html  fn.decode_config.html  fn.decode_config_buf.html  fn.decode_ws.html  fn.encode.html  fn.encode_config.html  fn.encode_config_buf.html  index.html  sidebar-items.js  static.STANDARD.html  static.URL_SAFE.html  static.URL_SAFE_NO_PAD.html  struct.Config.html
docs/api/byteorder/: enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.NativeEndian.html  type.NetworkEndian.html
docs/api/bytes/: enum.BigEndian.html  enum.LittleEndian.html  index.html  struct.Bytes.html  struct.BytesMut.html  trait.Buf.html  trait.BufMut.html  trait.ByteOrder.html  trait.IntoBuf.html
docs/api/c3po/: ConnFuture.t.html  index.html  sidebar-items.js  struct.Config.html  struct.Conn.html  struct.Pool.html  type.ConnFuture.html
docs/api/cargonauts/: fn.serve.html  index.html  macro.relation!.html  macro.relation.html  macro.routes!.html  macro.routes.html  sidebar-items.js  struct.Environment.html  struct.Error.html  trait.Relationship.html  trait.Resource.html
docs/api/cargonauts_config/: enum.Value.html  index.html  sidebar-items.js  struct.CargonautsConfig.html  struct.Env.html
docs/api/cfg_if/: index.html
docs/api/compass_rose/: fn.routes_impl.html  index.html  routes_impl.v.html  sidebar-items.js
docs/api/either/: enum.Either.html  index.html  macro.try_left.html  macro.try_right.html
docs/api/futures/: enum.Async.html  enum.AsyncSink.html  index.html  macro.task_local.html  macro.try_ready.html  sidebar-items.js  type.Poll.html  type.StartSend.html
docs/api/futures_cpupool/: index.html  struct.Builder.html  struct.CpuFuture.html  struct.CpuPool.html
docs/api/handlebars/: index.html  sidebar-items.js  struct.Context.html  struct.Handlebars.html  struct.Helper.html  struct.RenderContext.html  (+5 more)
docs/book/: .SUMMARY.md.swp  .intro.md.swp  echo.html  index.html  intro.html  print.html  structure.html
examples/: basic.rs  echo.rs  setup.rs
src/: api.rs  lib.rs  links.rs  macros.rs  presenter.rs  repr.rs  router.rs
src/_internal/: api.rs  collection.rs  document.rs  identifier.rs  links.rs  mod.rs  rels.rs  resource.rs  router.rs  wrapper.rs
src/api/: alias.rs  append.rs  async.rs  clear.rs  delete.rs  error.rs  get.rs  index.rs  mod.rs  patch.rs  post.rs  rel.rs  remove.rs  replace.rs  sort.rs
src/asset-pipeline/: Cargo.toml
src/cargonauts/: lib.rs
src/cargonauts-config/: Cargo.toml
src/compass-rose/: Cargo.toml
src/compass-rose/src/: ast.rs  lib.rs  parser.lalrpop  parser.rs
src/jsonapi-derive/: Cargo.toml
src/macros/: mod.rs  relation.rs  resource.rs
src/mainsail/: Cargo.toml
src/mainsail/src/: lib.rs  relations.rs
src/mainsail/src/formats/: debug.rs  display.rs  handlebars.rs  mod.rs
src/mainsail/src/formats/jsonapi/: fieldset.rs  mod.rs
src/mainsail/src/formats/jsonapi/present/: attributes.rs  document.rs  mod.rs  rels.rs  traits.rs
src/mainsail/src/formats/jsonapi/receive/: document.rs  mod.rs  object.rs  rels.rs  traits.rs
src/mainsail/src/methods/: delete.rs  delete_related.rs  get.rs  get_many.rs  get_one.rs  index.rs  mod.rs  patch.rs  post.rs  post_related.rs  update_related.rs
src/presenter/: jsonapi.rs  mod.rs
src/receiver/: mod.rs
src/rigging/: Cargo.toml
src/rigging/src/: .presenters.rs.swo  .services.rs.swl  .services.rs.swm  .services.rs.swn  .services.rs.swo  connections.rs  endpoint.rs  environment.rs  error.rs  format.rs  http.rs  lib.rs  method.rs  request.rs  resource.rs  route.rs  routes.rs  service.rs
src/rigging/src/connections/: client.rs  mock.rs  mod.rs  redis.rs
src/rigging/src/present/: middleware.rs  mod.rs
src/rigging/src/receive/: middleware.rs  mod.rs
src/router/: default.rs  include.rs  mock.rs  mod.rs  page.rs  sort.rs
src/simple-debug/: Cargo.toml
src/simple-debug/src/: lib.rs
src/tests/: mod.rs  object.rs  photos.rs
tests/: object.rs  photos.rs  server.rs
(+2505 files in other folders)
