[package]
authors = ["Without Boats <woboats@gmail.com>"]
description = "cargonauts - a Rust web framework"
license = "MIT OR Apache-2.0"
name = "cargonauts"
repository = "https://github.com/withoutboats/cargonauts"
version = "0.2.0"

[dependencies]
futures = "0.1.11"
mime = "0.2.3"
proc-macro-hack = "0.3.3"

[dependencies.compass-rose]
path = "src/compass-rose"

[dependencies.mainsail]
path = "src/mainsail"

[dependencies.rigging]
path = "src/rigging"

[dependencies.simple-debug]
path = "src/simple-debug"

[lib]
path = "src/cargonauts/lib.rs"

[workspace]
