[package]
authors = ["Without Boats <woboats@gmail.com>"]
description = "cargonauts - a Rust web framework"
license = "MIT OR Apache-2.0"
name = "cargonauts"
repository = "https://github.com/withoutboats/cargonauts"
version = "0.2.0"

[dependencies]
futures = "0.1.11"
proc-macro-hack = "0.3.3"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"

[dependencies.c3po]
git = "https://github.com/withoutboats/c3po"

[dependencies.asset-pipeline]
path = "src/asset-pipeline"

[dependencies.cargonauts-config]
path = "src/cargonauts-config"

[dependencies.compass-rose]
path = "src/compass-rose"

[dependencies.mainsail]
path = "src/mainsail"

[dependencies.rigging]
path = "src/rigging"

[dependencies.jsonapi-derive]
path = "src/jsonapi-derive"

[dependencies.tokio-service]
branch = "new-new-service"
git = "https://github.com/withoutboats/tokio-service"

[dependencies.tokio-redis]
git = "https://github.com/withoutboats/tokio-redis"

[lib]
path = "src/cargonauts/lib.rs"

[workspace]
exclude = ["demo"]
