[package]
authors = ["Without Boats <woboats@gmail.com>"]
description = "cargonauts - a Rust web framework"
license = "MIT OR Apache-2.0"
name = "cargonauts"
repository = "https://github.com/cargonauts-rs/cargonauts"
version = "0.2.1"

[dependencies]
futures = "0.1.11"
proc-macro-hack = "0.3.3"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"

[dependencies.asset-pipeline]
path = "src/asset-pipeline"

[dependencies.c3po]
branch = "singlethreaded"
git = "https://github.com/withoutboats/c3po"

[dependencies.cargonauts-config]
path = "src/cargonauts-config"

[dependencies.compass-rose]
path = "src/compass-rose"

[dependencies.jsonapi-derive]
path = "src/jsonapi-derive"

[dependencies.mainsail]
path = "src/mainsail"

[dependencies.rigging]
path = "src/rigging"

[dependencies.tokio-redis]
git = "https://github.com/withoutboats/tokio-redis"

[dependencies.tokio-service]
branch = "new-new-service"
git = "https://github.com/withoutboats/tokio-service"

[dev-dependencies]
reqwest = "0.6.2"

[lib]
path = "src/cargonauts/lib.rs"

[workspace]
exclude = ["demo"]
