[package]
authors = ["Without Boats <woboats@gmail.com>"]
build = "build.rs"
name = "compass-rose"
version = "0.1.0"

[build-dependencies]
lalrpop = "0.12.5"

[dependencies]
heck = "0.2.1"
itertools = "0.6.0"
lalrpop-util = "0.12.5"
proc-macro-hack = "0.3.2"
quote = "0.3.15"
serde_json = "1.0.0"

[dependencies.cargonauts-config]
path = "../cargonauts-config"

[lib]
proc-macro = true
