[package]
authors = ["Without Boats <woboats@gmail.com>"]
name = "mainsail"
version = "0.1.0"

[dependencies]
futures = "0.1.13"
handlebars = "0.26.2"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
url = "1.4.0"

[dependencies.rigging]
path = "../rigging"

[dependencies.serde_urlencoded]
git = "https://github.com/withoutboats/serde_urlencoded"
branch = "deserialize-unit"
