[package]
authors = ["Without Boats <woboats@gmail.com>"]
name = "rigging"
version = "0.1.0"

[dependencies]
anymap = "0.12.1"
backtrace = "0.3.0"
futures = "0.1.13"
futures-cpupool = "0.1.5"
num_cpus = "1.5.1"
r2d2 = "0.7.2"
route-recognizer = "0.1.12"
serde = "1.0.0"
tokio-core = "0.1.6"
url = "1.4.0"

[dependencies.c3po]
branch = "singlethreaded"
git = "https://github.com/withoutboats/c3po"

[dependencies.hyper]
branch = "new-new-service"
git = "https://github.com/withoutboats/hyper"

[dependencies.tokio-redis]
git = "https://github.com/withoutboats/tokio-redis"

[dependencies.tokio-service]
branch = "new-new-service"
git = "https://github.com/withoutboats/tokio-service"
