[package]
name = "simple-debug"
version = "0.1.0"
authors = ["Without Boats <woboats@gmail.com>"]

[dependencies.mainsail]
path = "../mainsail"

[dependencies.rigging]
path = "../rigging"

[dependencies.tokio-service]
branch = "stream-middleware"
git = "https://github.com/withoutboats/tokio-service"
